Fixato bug che faceva partire il suono d'inizio quando non doveva.